--- a/signup.html
+++ b/signup.html
@@ -271,6 +271,7 @@
             email,
             password,
             company,
+            business: false,
           });
           localStorage.setItem(AUTH_KEY, "1");
           localStorage.setItem(USER_KEY, email);
