--- a/checkout.html
+++ b/checkout.html
@@ -32,9 +32,10 @@
         min-height: 100vh;
         display: grid;
         place-items: center;
-        padding: 1.5rem;
+        padding: 1rem;
         position: relative;
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: auto;
       }
       body::before, body::after {
         content: "";
@@ -63,8 +64,9 @@
         border: 1px solid var(--border);
         border-radius: 20px;
         box-shadow: var(--shadow);
-        padding: 1.75rem;
-        width: min(980px, 100%);
+        padding: 1.1rem;
+        width: 100%;
+        max-width: 980px;
         position: relative;
         z-index: 1;
       }
@@ -75,12 +77,12 @@
         margin-bottom: 1rem;
       }
       .brand-logo {
-        height: 44px;
+        height: 40px;
         width: auto;
         border-radius: 12px;
       }
       h1 {
-        font-size: 1.4rem;
+        font-size: 1.15rem;
         color: var(--text-primary);
       }
       p.lead {
@@ -107,8 +109,8 @@
       }
       .checkout-grid {
         display: grid;
-        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-        gap: 1.5rem;
+        grid-template-columns: 1fr;
+        gap: 1rem;
         align-items: start;
       }
       .checkout-form {
@@ -185,12 +187,12 @@
       .hidden { display: none; }
       .field-grid {
         display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-columns: 1fr;
         gap: 0.85rem;
       }
       .field-grid-3 {
         display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
+        grid-template-columns: 1fr;
         gap: 0.85rem;
       }
       .payment-details {
@@ -255,15 +257,26 @@
       .pix-area div {
         word-break: break-all;
       }
-      @media (max-width: 520px) {
-        .checkout-grid {
-          grid-template-columns: 1fr;
-        }
+      @media (min-width: 640px) {
+        body { padding: 1.5rem; }
+        .card { padding: 1.75rem; }
+        .brand-logo { height: 44px; }
+        h1 { font-size: 1.4rem; }
+      }
+
+      @media (min-width: 720px) {
         .field-grid {
-          grid-template-columns: 1fr;
+          grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+      }
+
+      @media (min-width: 960px) {
+        .checkout-grid {
+          grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+          gap: 1.5rem;
         }
         .field-grid-3 {
-          grid-template-columns: 1fr;
+          grid-template-columns: repeat(3, minmax(0, 1fr));
         }
       }
     </style>
