--- a/sales.html
+++ b/sales.html
@@ -559,19 +559,79 @@
       /* ==========================================================================
          7. RESPONSIVIDADE
          ========================================================================== */
-      @media (max-width: 800px) {
-        .hero {
-          grid-template-columns: 1fr; /* Empilha no mobile */
-          text-align: center;
-        }
-        .hero p { margin: 0 auto 24px auto; }
-        .cta-row { justify-content: center; }
-        
-        .topbar { flex-direction: column; align-items: flex-start; gap: 10px; }
-        .pill { display: none; } /* Esconde versão no mobile pra limpar */
-        
-        .sheet-table { display: block; overflow-x: auto; } /* Scroll na tabela */
+      .page-shell {
+        padding: 12px;
+        gap: 16px;
+      }
 
+      .panel {
+        padding: 18px;
+      }
+
+      .topbar {
+        padding: 12px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+      }
+
+      .pill { display: none; }
+
+      .hero {
+        grid-template-columns: 1fr;
+        gap: 22px;
+      }
+
+      .hero h1 {
+        font-size: 1.6rem;
+        margin-bottom: 12px;
+      }
+
+      .hero p {
+        font-size: 1rem;
+        margin-bottom: 18px;
+        max-width: none;
+      }
+
+      .cta-row { justify-content: flex-start; }
+
+      .sheet-table {
+        display: block;
+        overflow-x: auto;
+      }
+
+      @media (min-width: 801px) {
+        .page-shell {
+          padding: 20px;
+          gap: 24px;
+        }
+
+        .panel { padding: 32px; }
+
+        .topbar {
+          padding: 16px 24px;
+          flex-direction: row;
+          align-items: center;
+          gap: 12px;
+        }
+
+        .pill { display: inline-block; }
+
+        .hero {
+          grid-template-columns: 1.2fr 0.8fr;
+          gap: 40px;
+        }
+
+        .hero h1 {
+          font-size: 2.25rem;
+          margin-bottom: 16px;
+        }
+
+        .hero p {
+          font-size: 1.125rem;
+          margin-bottom: 24px;
+          max-width: 600px;
+        }
       }
     </style>
   </head>
