--- a/signup.html
+++ b/signup.html
@@ -26,9 +26,10 @@
         min-height: 100vh;
         display: grid;
         place-items: center;
-        padding: 1.5rem;
+        padding: 1rem;
         position: relative;
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: auto;
       }
       body::before, body::after {
         content: "";
@@ -57,8 +58,9 @@
         border: 1px solid var(--border);
         border-radius: 20px;
         box-shadow: var(--shadow);
-        padding: 1.75rem;
-        width: min(520px, 100%);
+        padding: 1.1rem;
+        width: 100%;
+        max-width: 520px;
         position: relative;
         z-index: 1;
       }
@@ -69,12 +71,12 @@
         margin-bottom: 1rem;
       }
       .brand-logo {
-        height: 44px;
+        height: 40px;
         width: auto;
         border-radius: 12px;
       }
       h1 {
-        font-size: 1.4rem;
+        font-size: 1.15rem;
         color: var(--text-primary);
       }
       p.lead {
@@ -171,6 +173,13 @@
         padding: 0 0.25rem;
       }
       .switch a:hover { text-decoration: underline; }
+
+      @media (min-width: 640px) {
+        body { padding: 1.5rem; }
+        .card { padding: 1.75rem; }
+        .brand-logo { height: 44px; }
+        h1 { font-size: 1.4rem; }
+      }
     </style>
   </head>
   <body>
